fix: Add list itens stretch

--- a/src/css/components/edit-box/edit-list-item.css
+++ b/src/css/components/edit-box/edit-list-item.css
@@ -14,6 +14,8 @@
 	box-sizing: inherit;
 }
 
+:host([stretch]) { width: 100%; }
+
 :host([hidden]) { display: none; }
 
 :host([edit]) {
